Updating site-title to avoid chrome wrapping bug

--- a/source/resource/css/layout/main-header.styl
+++ b/source/resource/css/layout/main-header.styl
@@ -32,6 +32,7 @@
     padding 0.5em 1em
     color #fff
     display block
+    white-space nowrap
 
     &:hover
       // background-color darken($pageBgColor, 40%)
